<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.signup.SignupFragment"
    android:background="@color/md_theme_light_primary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/fragmentSignup_cardview"
            android:orientation="vertical"
            android:paddingBottom="-20dp"
            app:layout_constraintBottom_toTopOf="@+id/fragmentSignup_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|start"
                android:alpha="0.4"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_banner_foreground" />

            <ImageView
                android:layout_width="320dp"
                android:layout_height="297dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_foreground" />


        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragmentSignup_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-25dp"
            app:cardCornerRadius="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_us"
                    android:textColor="@color/seed"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:alpha="0.9"
                    android:text="@string/insert_university_credential"
                    android:textColor="@color/md_theme_light_onSecondaryContainer"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:alpha="0.7"
                    android:text="@string/email_address"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragmentSignup_textView_emailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:textColor="@color/md_theme_light_error"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.TextInputLayout.Underline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentSignup_editText_emailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:alpha="0.7"
                    android:text="@string/name"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragmentSignup_textView_nameError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:textColor="@color/md_theme_light_error"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.TextInputLayout.Underline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentSignup_editText_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/user_filled"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:alpha="0.7"
                    android:text="@string/surname"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragmentSignup_textView_surnameError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:textColor="@color/md_theme_light_error"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.TextInputLayout.Underline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentSignup_editText_surname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/user_filled"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:alpha="0.7"
                    android:text="@string/password"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragmentSignup_textView_passwordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:textColor="@color/md_theme_light_error"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.TextInputLayout.Underline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentSignup_editText_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:alpha="0.7"
                    android:text="@string/confirm_password"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragmentSignup_textView_confirmPasswordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:textColor="@color/md_theme_light_error"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.TextInputLayout.Underline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentSignup_editText_confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragmentSignup_button_signup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/signup"
                app:cornerRadius="32dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="12dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/fragmentSignup_textView_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="6dp"
                        android:alpha="0.7"
                        android:text="@string/already_signup"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.328"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragmentSignup_button_login"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="84dp"
                        android:layout_toEndOf="@+id/fragmentSignup_textView_login"
                        android:text="@string/login"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>