...
        android:id="@+id/signinFragment"
        android:name="it.unimib.communimib.ui.auth.signin.SigninFragment"
        android:label="fragment_signin"
        tools:layout="@layout/fragment_signin" >
        <action
            android:id="@+id/action_signinFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
        <action
            android:id="@+id/action_signinFragment_to_mainActivity"
            app:destination="@id/mainActivity" />
        <action
            android:id="@+id/action_signinFragment_to_passwordResetFragment"
            app:destination="@id/passwordResetFragment" />
...
